--- a/admin/admin.css
+++ b/admin/admin.css
@@ -34,3 +34,19 @@ textarea { height: 80px; resize: vertical; }
 .delete-section-btn:hover { background-color: #c82333; }
 #status-message { margin-top: 20px; font-weight: bold; text-align: center; }
 img[src=""] { display: none; }
+
+/* Di dalam admin.css */
+
+.image-preview {
+    max-width: 250px;
+    height: auto;
+    border: 1px solid #ddd;
+    margin-top: 5px;
+    border-radius: 4px;
+    display: block;
+}
+
+/* Sembunyikan pratinjau jika tidak ada gambar */
+img.image-preview[src=""] {
+    display: none;
+}
